# mcat-study-plan

./: README.md  Taskfile.yml  pyproject.toml
docs/: index.html
notebooks/: study_plan.ipynb
planner/: schedule.py
