[project]
name = "mcat-study-plan"
version = "0.1.0"
description = "Research-backed MCAT study planner — generates personalized schedules from evidence on effective preparation"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2",
    "plotly>=5.18",
    "jupyter>=1.0",
    "nbconvert>=7.0",
]

[project.optional-dependencies]
dev = ["ipykernel", "ruff"]

[tool.ruff]
target-version = "py311"
line-length = 100
